# apis

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  WORKSPACE  go.mod  go.sum  go_repositories.bzl  proto_repositories.bzl  repositories.bzl  rules_proto_config.yaml
cmd/protopkg_create/: BUILD.bazel  main.go
cmd/protopkg_file/: BUILD.bazel  main.go
cmd/protopkg_library/: BUILD.bazel  main.go  types.go
cmd/protopkg_package/: BUILD.bazel  main.go
deploy/: BUILD.bazel
gazelle/language/: generate.go
gazelle/language/protopkg/: BUILD.bazel  config.go  fix.go  generate.go  language.go  proto_repository_info.star  protopkg.go  protopkg_file.star  protopkg_library.go  protopkg_library.star  protopkg_package.go  protopkg_package.star  protopkg_plugin.star  resolve.go  resolver.go
repos/: BUILD.bazel
rules/: proto_compiler.bzl  protopkg_file.bzl  protopkg_layer.bzl  protopkg_library.bzl  protopkg_package.bzl  providers.bzl
