load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@build_stack_rules_proto//rules:proto_gazelle.bzl", "DEFAULT_LANGUAGES", "proto_gazelle")

exports_files(["rules_proto_config.yaml"])

# -- Gazelle language "walk" ---
# gazelle:exclude vendor

# -- Gazelle language "resolve" ---

# -- Gazelle language "go" ---
# gazelle:prefix github.com/protopkg/apis
# gazelle:go_generate_proto false

# -- Gazelle language "protobuf" ---
# gazelle:proto_language descriptor enabled true

gazelle_binary(
    name = "gazelle-protopkg",
    languages = DEFAULT_LANGUAGES + [
        "//gazelle/language/protopkg",
    ],
)

proto_gazelle(
    name = "gazelle",
    cfgs = ["//:rules_proto_config.yaml"],
    command = "update",
    gazelle = ":gazelle-protopkg",
    imports = [
        "@googleapis//:imports.csv",
        "@protoapis//:imports.csv",
        "@stackbuildapis//:imports.csv",
    ],
)

gazelle(
    name = "update_go_repositories",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_repositories.bzl%go_repositories",
        "-build_file_proto_mode=disable_global",
        "-prune=true",
    ],
    command = "update-repos",
)
