load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@build_stack_rules_proto//rules:proto_gazelle.bzl", "proto_gazelle")
load("//rules:proto_compiler.bzl", "proto_compiler")

exports_files(["rules_proto_config.yaml"])

# -- Gazelle language "walk" ---
# gazelle:exclude vendor

# -- Gazelle language "resolve" ---
# gazelle:resolve go go github.com/stackb/rules_proto/pkg/protoc @build_stack_rules_proto//pkg/protoc
# gazelle:resolve go go google.golang.org/protobuf/types/descriptorpb @org_golang_google_protobuf//types/descriptorpb

# -- Gazelle language "go" ---
# gazelle:prefix github.com/protopkg/apis
# gazelle:go_generate_proto false

# -- Gazelle language "protobuf" ---
# gazelle:proto_language descriptor enabled true

gazelle_binary(
    name = "gazelle-custom",
    languages = [
        "@bazel_gazelle//language/proto:go_default_library",
        "@bazel_gazelle//language/go:go_default_library",
        "@build_stack_rules_proto//language/protobuf",
    ],
)

proto_gazelle(
    name = "gazelle",
    cfgs = ["//:rules_proto_config.yaml"],
    data = ["//gazelle/language/protopkg:starlark"],
    gazelle = ":gazelle-custom",
    imports = [
        "@googleapis//:imports.csv",
        "@protoapis//:imports.csv",
        "@stackbuildapis//:imports.csv",
    ],
)

gazelle(
    name = "update_go_repositories",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_repositories.bzl%go_repositories",
        "-build_file_proto_mode=disable_global",
        "-prune=true",
    ],
    command = "update-repos",
)

proto_compiler(
    name = "proto_compiler",
    visibility = ["//visibility:public"],
)
