load("//rules:protopkg_layer.bzl", "protopkg_layer")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")

protopkg_layer(
    name = "protobuf-wkt",
    deps = [
        "@protoapis//google/protobuf:descriptor_protopkg",
        # "@stackbuildapis//build/stack/bzl/v1beta:application_protopkg",
        # "@stackbuildapis//build/stack/protobuf/compiler/v1alpha1:service_protopkg",
        # "@stackbuildapis//build/stack/protobuf/package/v1alpha1:package_protopkg",
        # "@stackbuildapis//build/stack/starlark/info/v1beta1:starlark_info_protopkg",
    ],
)

container_layer(
    name = "grpcstar",
    files = ["@build_stack_grpc_starlark//cmd/grpcstar"],
)
