load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protopkg_create_lib",
    srcs = ["main.go"],
    importpath = "github.com/protopkg/apis/cmd/protopkg_create",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@stackbuildapis//build/stack/protobuf/package/v1alpha2:package_go_proto",
    ],
)

go_binary(
    name = "protopkg_create",
    embed = [":protopkg_create_lib"],
    visibility = ["//visibility:public"],
)
