load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protopkg_library_lib",
    srcs = ["main.go"],
    importpath = "github.com/protopkg/apis/cmd/protopkg_library",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_stackb_protoreflecthash//:protoreflecthash",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@stackbuildapis//build/stack/protobuf/package/v1alpha2:package_go_proto",
    ],
)

go_binary(
    name = "protopkg_library",
    embed = [":protopkg_library_lib"],
    visibility = ["//visibility:public"],
)
