load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protopkg_package_lib",
    srcs = ["main.go"],
    importpath = "github.com/protopkg/apis/cmd/protopkg_package",
    visibility = ["//visibility:private"],
    deps = [
        "@bazel_gazelle//flag:go_default_library",
        "@com_github_stackb_protoreflecthash//:protoreflecthash",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@stackbuildapis//build/stack/protobuf/package/v1alpha2:package_go_proto",
    ],
)

go_binary(
    name = "protopkg_package",
    embed = [":protopkg_package_lib"],
    visibility = ["//visibility:public"],
)
