load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protopkg",
    srcs = [
        "config.go",
        "fix.go",
        "generate.go",
        "language.go",
        "protopkg_library.go",
        "resolve.go",
    ],
    importpath = "github.com/protopkg/apis/gazelle/language/protopkg",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@build_stack_rules_proto//pkg/protoc",
    ],
)
